[K/N][tests] Fix warnings caused by using JDK 11 for test runs
4e79d3e switches K/N test runs from JDK 8 (project default) to JDK 11.
Kotlin test infra uses reflection to access JDK internals, and JDK 11
emits some warnings about it.

This commit adds JVM arguments to silence those warnings.